# tvt-iptool-linux

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
data/: io.github.dannielperez.tvt-iptool.desktop  io.github.dannielperez.tvt-iptool.metainfo.xml  meson.build
src/: application-gtk3.c  application-gtk4.c  application.c  application.h  config.c  config.h  device.c  device.h  discovery.c  discovery.h  l2-provision.c  l2-provision.h  main.c  meson.build  network.c  network.h  sdk-loader.c  sdk-loader.h  web-provision.c  web-provision.h  web-uri.c  web-uri.h
tests/: check-no-vendor-sdk.sh  fake-sdk.c  meson.build  test-config.c  test-network.c  test-parser.c  test-sdk-loader.c
