install_data(
  'io.github.dannielperez.tvt-iptool.desktop',
  install_dir: get_option('datadir') / 'applications',
)

install_data(
  'io.github.dannielperez.tvt-iptool.metainfo.xml',
  install_dir: get_option('datadir') / 'metainfo',
)

install_data(
  'icons/hicolor/scalable/apps/io.github.dannielperez.tvt-iptool.svg',
  install_dir: get_option('datadir') / 'icons/hicolor/scalable/apps',
)
